# f1042-midi-interface

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md  STM32F042F6Px_FLASH.ld  STM32F042x6.cmake  f1042-midi-interface.ioc  f1042-midi-interface.xml
Application/: application.c  application.h  io.c  io.h  midi.c  midi.h  process.c  process.h  usb.c
Inc/: mxconstants.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  usbd_conf.h
Middlewares/USB_MIDI/: usb_device.c  usbd_audio_midi.c  usbd_audio_midi.h  usbd_conf.c  usbd_conf.h  usbd_desc.c
Protoplasm/global/: defines.h
Protoplasm/i2c/: i2c.c  i2c.h
Protoplasm/lowlevel/: ringbuffer.c  ringbuffer.h  syscalls.c  util.c  util.h
Protoplasm/protoplasm/: app_task.c  app_task.h  app_task_meta.h  usb_meta.h
Protoplasm/uart/: uart.c  uart.h
Protoplasm/usbdevice/: class.h  class_audio.c  class_audio.h  class_cdc.c  class_cdc.h  common.c  common.h  descriptor.c  descriptor.h  platform.c
Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  usbd_audio_if.c  usbd_conf.c
